--- a/src/main/resources/templates/daibanliebiao.html
+++ b/src/main/resources/templates/daibanliebiao.html
@@ -34,16 +34,10 @@
 	<body>
 		
 		<div class="x_content">
-                    <br>
+
                     <ul>
 			
                     <form id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
-
-            
-
-                   
-
-
 
                <li>       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12" for="first-name">任务名称： 
@@ -58,7 +52,7 @@
                       
                       
                    <li>    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="last-name">待办类型： </label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">待办类型： </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <select class="form-control">
                             <option>请选择</option>
@@ -72,7 +66,7 @@
                       
                       
                 <li>       <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="creatTime">达到日期：</label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">达到日期：</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                         <fieldset>
                           <div class="control-group">
@@ -102,21 +96,7 @@
                  </form></ul>
                   </div>
 		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+
 		<div class="col-sm-12"><table id="datatable-fixed-header" class="table table-striped table-bordered dataTable no-footer" role="grid" aria-describedby="datatable-fixed-header_info"><thead>
                         <tr role="row">
                         	<th class="sorting_asc" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 194px;">待办类型</th>
@@ -124,12 +104,9 @@
                         	<th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 143px;">达到日期</th>
                         	<th class="sorting" tabindex="0" aria-controls="datatable-fixed-header" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 143px;">操作</th>
                       </thead>
-                      
-
 
                       <tbody>
-               
-                        
+
                       <tr role="row" class="odd">
                           <td class="sorting_1">Airi Satou</td>
                           <td>Accountant</td>
