--- a/src/main/resources/templates/renshidanganxiugai.html
+++ b/src/main/resources/templates/renshidanganxiugai.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>人事档案明细</title>
+		<title>人事档案修改</title>
 		<!-- Bootstrap -->
 		<link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Font Awesome -->
@@ -61,51 +61,83 @@
 	<body>
 		<div class="x_content">
 			<br>
-			<form id="demo-form2" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
+			<form th:action="@{/doModifyArchive}" method="post" enctype="multipart/form-data" id="frm" name="frm" data-parsley-validate="" class="form-horizontal form-label-left" novalidate="">
+				<input type="hidden" id="reviewStatus" name="reviewStatus" value=""  class="form-control col-md-7 col-xs-12">
+				<input type="hidden" id="id" name="id" th:value="${archive.id}" required="required" class="form-control col-md-7 col-xs-12">
+
 				<ul>
+					<input type="hidden" id="revStatus" name="revStatus" value="6" class="form-control col-md-7 col-xs-12">
+
 					<li class="lefttop">
-						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="deptment">所属部门:</label>
+						<div class="item form-group">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="depName">所属部门 <span class="required">*</span>
+							</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" id="deptment" th:value="${archive.depIds}" required="required" class="form-control col-md-7 col-xs-12">
-							</div>
+								<input readonly="readonly" th:value="${archive.depIds}" id="depName" type="text" name="depName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+								<input type="hidden" id="depId" name="depId">
+							</div><i id="myBT"  class="fa fa-search-plus"></i>
+							<div id="yincang">
+								<ul>
+									<li th:each="department:${departmentList}">
+										<span th:text="${department.depName}"  th:id="${department.id}"></span>
+									</li>
+								</ul>
+							</div >
 						</div>
+
 					</li>
 					<li class="lefttop">
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="positionName">职位名称:</label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12">职位名称:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" th:value="${archive.posIds}" id="positionName" name="positionName" required="required" class="form-control col-md-7 col-xs-12">
-							</div>
+								<input readonly="readonly" id="posName" th:value="${archive.depIds}" type="text" name="posName" data-validate-length-range="5,20" class="optional form-control col-md-7 col-xs-12">
+								<input type="hidden" id="posId" name="posId">
+							</div><i id="myBTPos"  class="fa fa-search-plus"></i>
+							<div id="psn">
+								<ul>
+									<li th:each="position:${positionList}">
+										<span th:text="${position.posName}"  th:id="${position.id}"></span>
+									</li>
+								</ul>
+							</div >
 						</div>
 					</li>
+
 					<li class="lefttop">
 						<!--<div class="col-md-6 col-sm-6 col-xs-12">
 								<input type="file" id="comm" name="comm" required="required" class="form-control col-md-7 col-xs-12">
 							</div>-->
 						<div class="image view view-first">
-                            <img style="width:160px;height:160px; display:block;" th:src="${archive.photoPath}"  alt="">
-							<!--<input type="text" th:value="${archive.photoPath}" id="comm" name="comm" required="required" class="form-control col-md-7 col-xs-12">-->
+							<img style="width:160px;height:160px; display:block;" th:src="${archive.photoPath}"  alt="">
+							<input type="hidden" id="photo" name="photos" th:value="${archive.photoPath}" required="required" class="form-control col-md-7 col-xs-12">
+
 						</div>
 					</li>
 					<li class="lefttop">
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12 ">档案状态</label>
 							<div class="col-md-6 col-sm-6 col-xs-12" >
-								<input type="text" id="archStatuss" name="archStatuss" th:value="${archive.archStatuss}" required="required" class="form-control col-md-7 col-xs-12">
+								<select class="form-control" name="archStatus">
+									<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==archStatus"
+											 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archive.archStatus})"
+											 th:value="${dictionary.id}">-- 请选择 --
+									</option>
+								</select>
 							</div>
 						</div>
 					</li>
 					<li class="lefttop">
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="posCode">职位编码:</label>
-							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" id="posCode" th:value="${archive.posCode}" name="posCode" required="required" class="form-control col-md-7 col-xs-12">
+							<label class="control-label col-md-3 col-sm-3 col-xs-12">职位编码:</label>
+							<div class="col-md-6 col-sm-6 col-xs-12" id="strs">
+
+								<input type="text" th:id="posCode" name="posCode"  th:value="${archive.posCode}"
+									   readonly  required="required" class="form-control col-md-7 col-xs-12">
 							</div>
 						</div>
 					</li>
 					<li class="lefttop">
-						
+
 					</li>
 					<li class="lefttop">
 						<div class="form-group">
@@ -119,12 +151,17 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12">性别:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" id="genders" name="genders" th:value="${archive.genders}" required="required" class="form-control col-md-7 col-xs-12">
+								<select class="form-control" name="gender">
+									<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==gender"
+											 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archive.gender})"
+											 th:value="${dictionary.id}">-- 请选择 --
+									</option>
+								</select>
 							</div>
 						</div>
 					</li>
 					<li class="lefttop">
-						
+
 					</li>
 					<li class="lefttop">
 						<div class="form-group">
@@ -143,9 +180,9 @@
 						</div>
 					</li>
 					<li class="lefttop">
-						
+
 					</li>
-					
+
 					<li class="leftmiddle">
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="IdCard">身份证号:</label>
@@ -164,9 +201,14 @@
 					</li>
 					<li class="leftmiddle">
 						<div class="form-group">
-							<label class="control-label col-md-3 col-sm-3 col-xs-12" for="political">政治面貌:</label>
+							<label class="control-label col-md-3 col-sm-3 col-xs-12">政治面貌:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" th:value="${archive.politicals}" id="political" name="political" required="required" class="form-control col-md-7 col-xs-12">
+								<select class="form-control" name="political">
+									<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==political"
+											 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archive.political})"
+											 th:value="${dictionary.id}">-- 请选择 --
+									</option>
+								</select>
 							</div>
 						</div>
 					</li>
@@ -190,8 +232,12 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12">学历</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" th:value="${archive.educations}" id="education" name="education" required="required" class="form-control col-md-7 col-xs-12">
-
+								<select class="form-control" name="education">
+									<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==education"
+											 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archive.education})"
+											 th:value="${dictionary.id}">-- 请选择 --
+									</option>
+								</select>
 							</div>
 						</div>
 					</li>
@@ -199,7 +245,12 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12">薪酬标准</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-								<input type="text" th:value="${archive.salaryStandards}" id="salaryStandard" name="salaryStandard" required="required" class="form-control col-md-7 col-xs-12">
+								<select class="form-control" name="salaryStandard">
+									<option  th:each="dictionary:${dictionaryList}" th:if="${dictionary.getDataType()}==salaryStd"
+											 th:text="${dictionary.dataName}" th:selected="(${dictionary.id}==${archive.salaryStandard})"
+											 th:value="${dictionary.id}">-- 请选择 --
+									</option>
+								</select>
 							</div>
 						</div>
 					</li>
@@ -239,7 +290,7 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12">建档时间:</label>
 							<div class="col-md-6 col-sm-6 col-xs-12">
-							<input type="text" th:value="${#dates.format(archive.createDate,'yyyy-MM-dd')}" class="form-control has-feedback-left" id="single_cal2" placeholder="时间" aria-describedby="inputSuccess2Status2">
+								<input type="text" th:value="${#dates.format(archive.createDate,'yyyy-MM-dd')}" class="form-control has-feedback-left" id="single_cal2" placeholder="时间" aria-describedby="inputSuccess2Status2">
 
 							</div>
 						</div>
@@ -278,17 +329,29 @@
 						</div>
 						
 					</li><br/>
-					<!--<li class="leftfooter1">下载附件&nbsp;
-					
-					</li>-->
+					<li class="leftfooter1">
+						<div class="form-group">
+							<label class="control-label col-md-1 col-sm-1 col-xs-12" >附件:</label>
+							<div class="col-md-6 col-sm-6 col-xs-12" id="uploadfile" style="display: none">
+								<input type="hidden" th:value="${archive.annex}" id="annexhidden" name="annex" required="required" class="form-control col-md-7 col-xs-12">
+								<input id="annex" type="file" th:value="${archive.annex}" class="form-control col-md-6 col-sm-6 col-xs-12" name="docFile">
+								<span style="color:red;display: inline-block; font-weight: bold;">*注：1、大小不得超过500m.2、文件类型：doc</span>
+							</div>
+							<div class="col-md-11 col-sm-11 col-xs-12" id="docFile"></div>
+						</div>
+
+					</li>
 
 				</ul>
-
-				<div class="ln_solid"></div>
+				<div class="form-group"></div><div class="form-group"></div><div class="form-group"></div>
 				<div class="form-group">
-					
 					<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-						
+						<input type="button" id="modA" name="modA" value="修改"
+							   th:onclick="submitClaimVoucher('修改')"
+							   class="btn btn-primary"></input>
+						<input type="button" id="submitA" name="submitA" value="提交"
+							   th:onclick="submitClaimVoucher('提交')"
+							   class="btn btn-primary"></input>
 						<button type="submit" class="btn btn-success">返回</button>
 					</div>
 				</div>
@@ -296,6 +359,99 @@
 			</form>
 		</div>
 
+
+
+
+		<!-- jQuery -->
+		<script src="js/datepicker/daterangepicker.js"></script><script src="js/moment/moment.min.js"></script><script src="../vendors/jquery/dist/jquery.min.js"></script><script src="../vendors/jquery/dist/jquery.min.js"></script><!-- Bootstrap --><script src="../vendors/bootstrap/dist/js/bootstrap.min.js"></script><!-- FastClick --><script src="../vendors/fastclick/lib/fastclick.js"></script><!-- NProgress --><script src="../vendors/nprogress/nprogress.js"></script><!-- bootstrap-progressbar --><script src="../vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+		<!-- iCheck --><script src="../vendors/iCheck/icheck.min.js"></script><!-- bootstrap-daterangepicker --><script src="js/moment/moment.min.js"></script><script src="js/datepicker/daterangepicker.js"></script><!-- bootstrap-wysiwyg --><script src="../vendors/bootstrap-wysiwyg/js/bootstrap-wysiwyg.min.js"></script><script src="../vendors/jquery.hotkeys/jquery.hotkeys.js"></script><script src="../vendors/google-code-prettify/src/prettify.js"></script><!-- jQuery Tags Input --><script src="../vendors/jquery.tagsinput/src/jquery.tagsinput.js"></script><!-- Switchery --><script src="../vendors/switchery/dist/switchery.min.js"></script><!-- Select2 --><script src="../vendors/select2/dist/js/select2.full.min.js"></script><!-- Parsley --><script src="../vendors/parsleyjs/dist/parsley.min.js"></script><!-- Autosize --><script src="../vendors/autosize/dist/autosize.min.js"></script><!-- jQuery autocomplete --><script src="../vendors/devbridge-autocomplete/dist/jquery.autocomplete.min.js"></script><!-- starrr --><script src="../vendors/starrr/dist/starrr.js"></script><!-- Custom Theme Scripts --><script src="../build/js/custom.min.js"></script>
+		<script>
+			function submitClaimVoucher(action){
+				if(!confirm("确定"+action+"档案吗")) return;
+				if (action == '修改'){
+					document.getElementById("reviewStatus").setAttribute("value",6);
+				}else{
+					document.getElementById("reviewStatus").setAttribute("value",7);
+				}
+				document.frm.submit();
+			}
+
+		</script>
+		<!--js-->
+		<script th:src="@{/js/jquery.js}"></script>
+		<script type="text/javascript">
+			$(document).ready(function () {
+				//显示下载与删除
+				var annexhidden=$("#annexhidden").val();
+				var id = $("#id").val();//通过表单隐藏域的获得档案id
+				if(annexhidden == null || annexhidden == "" ){
+					$("#uploadfile").show();//如果连接等于空，upload上传文件显示
+				}else{
+					$("#docFile").append("<p>"+annexhidden+
+							"&nbsp;&nbsp;<a href=\""+annexhidden+"?m="+Math.random()+"\" >下载</a> &nbsp;&nbsp;" +
+							"<a href=\"javascript:onclick=delDocFile('"+id+"');\">删除</a></p>");
+				}
+
+				//获取所属部门
+				$("#yincang span").click(function () {
+					var id=$(this).attr("id");
+					var depname=$(this).text();
+					$("#depId").val(id);
+					$("#depName").val(depname);
+				});
+				//点击显示和隐藏
+				$("#yincang").hide();
+				$("#myBT").click(function () {
+					var o=$("#yincang");
+					if(o.css("display")!="none"){
+						o.hide();
+						$(this).html("");
+					}else {
+						o.show();
+						$(this).html("");
+					}
+				});
+				$("#myBTPos").click(function () {
+					var o=$("#psn");
+					if(o.css("display")!="none"){
+						o.hide();
+						$(this).html("");
+					}else {
+						o.show();
+						$(this).html("");
+					}
+				});
+				$("#psn").hide();
+				$("#psn span").click(function(){
+					var id=$(this).attr("id");
+					var posName=$(this).text();
+					$("#posId").val(id);
+					$("#posName").val(posName);
+					if(posName!=null && posName!=""){
+						$.get("findPosCode",{"id":id},function (data) {
+							$("#posCode").val(data);
+						})
+					}
+				});
+
+			})
+		</script>
+		<script>
+			//删除
+			function delDocFile(id){
+				$.get("delDocFile",{"id":id},function(data){
+					if(data.rst == "success"){
+						$("#uploadfile").show();
+						$("#docFile").html('');
+					}else if(data== "failed"){
+						alert("删除失败！");
+					}else if(data== "noexist"){
+						alert("操作异常！");
+					}
+				},"json");
+
+			}
+		</script>
 		<!-- jQuery -->
 		<script src="js/datepicker/daterangepicker.js"></script>
 		<script src="js/moment/moment.min.js"></script>
