--- a/src/main/resources/templates/sidReview.html
+++ b/src/main/resources/templates/sidReview.html
@@ -44,6 +44,7 @@
                 "reviewOpinion": reviewOpinion
             }, function (data) {
                 if (data == "success") {
+                    window.location.replace("/salaryStandard");
                     alert("success");
                 }
             });
