更新薪资的部分功能

--- a/src/main/resources/templates/salaryStandard.html
+++ b/src/main/resources/templates/salaryStandard.html
@@ -57,6 +57,11 @@
                 <button type="submit" class="btn btn-outline-primary" name="select">查询</button>
             </div>
         </form>
+        <div class="form-group mx-sm-3 mb-2">
+            <a th:href="@{/operatingSalaryStandard(id=0,operating = 'insert')}">
+                <button type="submit" class="btn btn-outline-primary" name="select">标准登记</button>
+            </a>
+        </div>
 
     </div>
     <div>
